--- a/.github/workflows/cron-data-upload.yaml
+++ b/.github/workflows/cron-data-upload.yaml
@@ -86,3 +86,20 @@ jobs:
           cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
           cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
           files: http://cdn.afetbilgi.com/index.json http://cdn.afetbilgi.com/schema.json http://cdn.afetbilgi.com/version https://cdn.afetbilgi.com/index.json https://cdn.afetbilgi.com/schema.json https://cdn.afetbilgi.com/version
+
+      - name: Create and upload added_last_day added data
+        run: |
+          python ./data/24_updater.py ./latest.json > ./latest_new.json
+          aws s3 cp ./latest_new.json s3://cdn.afetbilgi.com
+
+      - name: Update version file
+        run: |
+          TZ=Europe/Istanbul date '+%d.%m.%Y %H:%M:%S' > last_build_version
+          aws s3 cp ./last_build_version s3://cdn.afetbilgi.com/version
+
+      - name: Purge cache
+        uses: nathanvaughn/actions-cloudflare-purge@master
+        with:
+          cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
+          cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
+          files: http://cdn.afetbilgi.com/latest_new.json
