Implement Table Definitions and Pipeline page

--- a/admin-panel-fe/.eslintrc.json
+++ b/admin-panel-fe/.eslintrc.json
@@ -16,6 +16,7 @@
         "import/extensions": "off",
         "import/prefer-default-export": "off",
         "arrow-body-style": "off",
+        "@typescript-eslint/indent": "off",
         "@typescript-eslint/no-unused-vars":  ["error", {
             "argsIgnorePattern": "^_",
             "varsIgnorePattern": "^_",
