--- a/admin-panel-fe/package.json
+++ b/admin-panel-fe/package.json
@@ -7,7 +7,7 @@
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.4",
+    "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
@@ -15,13 +15,20 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.192",
+    "@types/luxon": "^3.2.0",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-material-ui-form-validator": "^2.1.1",
+    "axios": "^1.3.4",
+    "i18next": "^22.4.12",
+    "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "material-react-toastify": "1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-material-ui-form-validator": "^3.0.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
