--- a/admin-panel-fe/package.json
+++ b/admin-panel-fe/package.json
@@ -27,6 +27,7 @@
     "luxon": "^3.3.0",
     "material-react-toastify": "1.0.1",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-material-ui-form-validator": "^3.0.0",
