--- a/admin-panel-fe/package.json
+++ b/admin-panel-fe/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-material-ui-form-validator": "^3.0.0",
+    "react-mui-dropzone": "^4.0.6",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
