--- a/admin-panel-fe/package.json
+++ b/admin-panel-fe/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-material-ui-form-validator": "^2.1.1",
     "axios": "^1.3.4",
+    "country-flag-icons": "^1.5.7",
     "i18next": "^22.4.12",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
