--- a/.github/workflows/http-health-check.yaml
+++ b/.github/workflows/http-health-check.yaml
@@ -3,9 +3,9 @@ name: HTTP Health Checker
 on:
   workflow_dispatch:
 
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: "*/6 * * * *" # Run every 6 minutes
+  # schedule:
+  #   # * is a special character in YAML so you have to quote this string
+  #   - cron: "*/6 * * * *" # Run every 6 minutes
 
 jobs:
   deploy:
