--- a/.github/workflows/map-data-upload.yaml
+++ b/.github/workflows/map-data-upload.yaml
@@ -3,9 +3,9 @@ name: Map data upload (cronjob)
 on:
   workflow_dispatch:
 
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: "*/30 * * * *" # Run every 30 minutes
+  # schedule:
+  #   # * is a special character in YAML so you have to quote this string
+  #   - cron: "*/30 * * * *" # Run every 30 minutes
 
 jobs:
   deploy:
