--- a/.github/workflows/pdf-generate-upload-markdown.yaml
+++ b/.github/workflows/pdf-generate-upload-markdown.yaml
@@ -3,8 +3,8 @@ name: PDF upload with Markdown (cronjob)
 on:
   workflow_dispatch:
 
-  schedule:
-    - cron: "32 * * * *"
+  # schedule:
+  #   - cron: "32 * * * *"
 
 jobs:
   deploy:
