--- a/.github/workflows/external-map-data-upload.yml
+++ b/.github/workflows/external-map-data-upload.yml
@@ -3,9 +3,9 @@ name: External Map data upload
 on:
   workflow_dispatch:
 
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: "*/6 * * * *" # Run every 6 minutes
+  # schedule:
+  #   # * is a special character in YAML so you have to quote this string
+  #   - cron: "*/6 * * * *" # Run every 6 minutes
 
 jobs:
   deploy:
